# personal-boilerplates

backup-mcp-eval/: Makefile  compose.yaml  pyproject.toml
backup-mcp-eval/src/: instruction.md  mcp_instance.py
backup-mcp-eval/src/services/: __init__.py  prompts.py  resources.py  tools.py
backups-fast-mcp-v1/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
backups-fast-mcp-v1/src/: main.py
backups-fast-mcp-v1/src/modules/: service.py
backups-fast-mcp-v1/src/server_docs/: mcp_behavior.md
backups-fast-mcp-v1/src/server_tools/: api_requests_brazil.py  management_markdown.py
backups-korza-boilerplates/app-fastapi-docker/: Dockerfile  README.md  compose.yaml  pyproject.toml
backups-korza-boilerplates/app-fastapi-docker/src/: main.py  streamlit_app.py
backups-korza-boilerplates/app-fastapi-docker/src/.streamlit/: config.toml  pages_index.toml
backups-korza-boilerplates/app-fastapi-docker/src/assets/databases/: game_one_liners.toml
backups-korza-boilerplates/app-fastapi-docker/src/endpoints/: game_one_liners.py  ping.py  rand_attrib.py
backups-korza-boilerplates/app-fastapi-docker/src/modules/: streamlit_extras.py
backups-korza-boilerplates/app-fastapi-docker/src/pages/: 00_home.py  00_settings.py
backups-korza-boilerplates/app-fastmcp-docker/: Dockerfile  README.md  compose.yaml
backups-korza-boilerplates/app-knowledge-repo/: how-to.md  makefile
backups-korza-boilerplates/app-ml-playbook/: .gitignore  playbook.py
backups-korza-boilerplates/app-multi-porpouse-py/: README.md  base.yaml
docker-uv-fast-api/: .dockerignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
docker-uv-fast-api/src/: main.py
docker-uv-fast-mcp/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
docker-uv-fast-mcp/src/: main.py
docker-uv-htmx/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
docker-uv-htmx/src/: main.py
modules-python-adk-agents/agent-business-customer/: agent.py
modules-python-adk-agents/agent-it-engineer-backend/: agent.py
(+129 files in other folders)
