[project]
name = "app-fastmcp-docker"
version = "0.1.0"
description = "Boilerplate app to create MCP servers with FastMCP"
authors = [{ name = "Marcelo Mastrangi Bracali" }]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "pyfiglet (>=1.0.4,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "fastmcp (>=0.4.1)",
    "wsproto (>=1.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
