[project]
name = "app-fastapi-docker"
version = "0.1.0"
description = "Boilerplate app to expose endpoints with fastapi"
authors = [{ name = "Marcelo Mastrangi Bracali" }]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (<3)",
    "pyfiglet (>=1.0.4,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
